@@ -6,6 +6,9 @@
 
 RELEASE 2.X.X - 
 
+  From Juan Lang:
+    - Fix WiX Tool to use .wixobj rather than .wxiobj for compiler output
+
   From Alexey Klimkin:
     - Fix nested LIBPATH expansion by flattening sequences in subst_path.
 
